--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "lerna run build",
     "precoverage": "trash ./coverage",
@@ -21,18 +24,6 @@
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/register": "^7.16.9",
-    "@enterthenamehere/esdoc": "file:packages\\esdoc",
-    "@enterthenamehere/esdoc-accessor-plugin": "file:packages\\esdoc-accessor-plugin",
-    "@enterthenamehere/esdoc-brand-plugin": "file:packages\\esdoc-brand-plugin",
-    "@enterthenamehere/esdoc-coverage-plugin": "file:packages\\esdoc-coverage-plugin",
-    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "file:packages\\esdoc-ecmascript-proposal-plugin",
-    "@enterthenamehere/esdoc-external-ecmascript-plugin": "file:packages\\esdoc-external-ecmascript-plugin",
-    "@enterthenamehere/esdoc-integrate-manual-plugin": "file:packages\\esdoc-integrate-manual-plugin",
-    "@enterthenamehere/esdoc-integrate-test-plugin": "file:packages\\esdoc-integrate-test-plugin",
-    "@enterthenamehere/esdoc-standard-plugin": "file:packages\\esdoc-standard-plugin",
-    "@enterthenamehere/esdoc-type-inference-plugin": "file:packages\\esdoc-type-inference-plugin",
-    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "file:packages\\esdoc-undocumented-identifier-plugin",
-    "@enterthenamehere/esdoc-unexported-identifier-plugin": "file:packages\\esdoc-unexported-identifier-plugin",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-plugin-istanbul": "^6.0.0",
     "cpx2": "^3.0.0",
@@ -49,36 +40,5 @@
     "mocha": "^9.2.0",
     "nyc": "^15.1.0",
     "trash-cli": "^4.0.0"
-  },
-  "dependencies": {
-    "@enterthenamehere/color-logger": "file:packages\\color-logger",
-    "@enterthenamehere/esdoc": "file:packages\\esdoc",
-    "@enterthenamehere/esdoc-accessor-plugin": "file:packages\\esdoc-accessor-plugin",
-    "@enterthenamehere/esdoc-brand-plugin": "file:packages\\esdoc-brand-plugin",
-    "@enterthenamehere/esdoc-core": "file:packages\\esdoc-core",
-    "@enterthenamehere/esdoc-coverage-plugin": "file:packages\\esdoc-coverage-plugin",
-    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "file:packages\\esdoc-ecmascript-proposal-plugin",
-    "@enterthenamehere/esdoc-exclude-source-plugin": "file:packages\\esdoc-exclude-source-plugin",
-    "@enterthenamehere/esdoc-external-ecmascript-plugin": "file:packages\\esdoc-external-ecmascript-plugin",
-    "@enterthenamehere/esdoc-external-nodejs-plugin": "file:packages\\esdoc-external-nodejs-plugin",
-    "@enterthenamehere/esdoc-external-webapi-plugin": "file:packages\\esdoc-external-webapi-plugin",
-    "@enterthenamehere/esdoc-flow-type-plugin": "file:packages\\esdoc-flow-type-plugin",
-    "@enterthenamehere/esdoc-importpath-plugin": "file:packages\\esdoc-importpath-plugin",
-    "@enterthenamehere/esdoc-inject-gtm-plugin": "file:packages\\esdoc-inject-gtm-plugin",
-    "@enterthenamehere/esdoc-inject-script-plugin": "file:packages\\esdoc-inject-script-plugin",
-    "@enterthenamehere/esdoc-inject-style-plugin": "file:packages\\esdoc-inject-style-plugin",
-    "@enterthenamehere/esdoc-integrate-manual-plugin": "file:packages\\esdoc-integrate-manual-plugin",
-    "@enterthenamehere/esdoc-integrate-test-plugin": "file:packages\\esdoc-integrate-test-plugin",
-    "@enterthenamehere/esdoc-jsx-plugin": "file:packages\\esdoc-jsx-plugin",
-    "@enterthenamehere/esdoc-lint-plugin": "file:packages\\esdoc-lint-plugin",
-    "@enterthenamehere/esdoc-publish-html-plugin": "file:packages\\esdoc-publish-html-plugin",
-    "@enterthenamehere/esdoc-publish-markdown-plugin": "file:packages\\esdoc-publish-markdown-plugin",
-    "@enterthenamehere/esdoc-react-plugin": "file:packages\\esdoc-react-plugin",
-    "@enterthenamehere/esdoc-standard-plugin": "file:packages\\esdoc-standard-plugin",
-    "@enterthenamehere/esdoc-type-inference-plugin": "file:packages\\esdoc-type-inference-plugin",
-    "@enterthenamehere/esdoc-typescript-plugin": "file:packages\\esdoc-typescript-plugin",
-    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "file:packages\\esdoc-undocumented-identifier-plugin",
-    "@enterthenamehere/esdoc-unexported-identifier-plugin": "file:packages\\esdoc-unexported-identifier-plugin",
-    "@enterthenamehere/ice-cap": "file:packages\\ice-cap"
   }
 }
