--- a/packages/esdoc-core/package.json
+++ b/packages/esdoc-core/package.json
@@ -38,7 +38,7 @@
     "@babel/parser": "^7.12.5",
     "@babel/preset-env": "^7.12.1",
     "@babel/traverse": "^7.12.5",
-    "@enterthenamehere/color-logger": "file:../color-logger",
+    "@enterthenamehere/color-logger": "*",
     "fs-extra": "^9.0.1",
     "rrdir": "^8.2.2"
   },
