--- a/packages/esdoc-lint-plugin/package.json
+++ b/packages/esdoc-lint-plugin/package.json
@@ -14,7 +14,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@enterthenamehere/esdoc-core": "file:../esdoc-core"
+    "@enterthenamehere/esdoc-core": "*"
   },
   "engines": {
     "node": ">= 10.23.1"
