--- a/packages/esdoc-type-inference-plugin/package.json
+++ b/packages/esdoc-type-inference-plugin/package.json
@@ -14,8 +14,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@enterthenamehere/color-logger": "file:../color-logger",
-    "@enterthenamehere/esdoc-core": "file:../esdoc-core"
+    "@enterthenamehere/color-logger": "*",
+    "@enterthenamehere/esdoc-core": "*"
   },
   "engines": {
     "node": ">= 10.23.1"
