--- a/packages/ice-cap/package.json
+++ b/packages/ice-cap/package.json
@@ -25,7 +25,7 @@
     "transpile": "babel ./src --out-dir ./out --root-mode upward"
   },
   "dependencies": {
-    "@enterthenamehere/color-logger": "file:../color-logger",
+    "@enterthenamehere/color-logger": "*",
     "cheerio": "1.0.0-rc.10"
   },
   "keywords": [
