--- a/packages/esdoc-accessor-plugin/package.json
+++ b/packages/esdoc-accessor-plugin/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
+    "url": "https://github.com/EnterTheNameHere/esdoc-monorepo.git",
     "directory": "packages/esdoc-accessor-plugin"
   },
   "publishConfig": {
