--- a/packages/ice-cap/package.json
+++ b/packages/ice-cap/package.json
@@ -4,6 +4,9 @@
   "description": "Programmable DOM-based HTML template library.",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/ice-cap",
+  "bugs": {
+    "url": "https://github.com/EnterTheNameHere/esdoc-monorepo/issues"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
