--- a/packages/esdoc-inject-gtm-plugin/package.json
+++ b/packages/esdoc-inject-gtm-plugin/package.json
@@ -4,6 +4,9 @@
   "description": "A inject google-tag-manager plugin for ESDoc",
   "author": "9renpoto",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/esdoc-inject-gtm-plugin",
+  "bugs": {
+    "url": "https://github.com/EnterTheNameHere/esdoc-monorepo/issues"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
