--- a/packages/esdoc-lint-plugin/package.json
+++ b/packages/esdoc-lint-plugin/package.json
@@ -4,6 +4,9 @@
   "description": "A lint plugin for ESDoc",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/esdoc-lint-plugin",
+  "bugs": {
+    "url": "https://github.com/EnterTheNameHere/esdoc-monorepo/issues"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
