--- a/packages/esdoc-core/package.json
+++ b/packages/esdoc-core/package.json
@@ -49,7 +49,8 @@
     "@babel/traverse": "^7.12.5",
     "@enterthenamehere/color-logger": "*",
     "fs-extra": "^9.0.1",
-    "rrdir": "^8.2.2"
+    "rrdir": "^8.2.2",
+    "upath": "^2.0.1"
   },
   "files": [
     "src",
