--- a/packages/esdoc-publish-markdown-plugin/package.json
+++ b/packages/esdoc-publish-markdown-plugin/package.json
@@ -17,7 +17,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@enterthenamehere/ice-cap": "*",
+    "@enterthenamehere/ice-cap": "^2.5.4-dev.3",
     "turndown": "^7.1.1",
     "turndown-plugin-gfm": "^1.0.2"
   },
