--- a/packages/esdoc-react-plugin/package.json
+++ b/packages/esdoc-react-plugin/package.json
@@ -17,8 +17,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@enterthenamehere/esdoc-standard-plugin": "*",
     "cheerio": "1.0.0-rc.10"
+  },
+  "peerDependencies": {
+    "@enterthenamehere/esdoc-core": "^2.5.4-dev.3",
+    "@enterthenamehere/esdoc-publish-html-plugin": "^2.5.4-dev.3"
   },
   "engines": {
     "node": ">=14.21.1"
