refactor: change esdoc-core dependency to esdoc

--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -54,7 +54,7 @@
     "trash-cli": "^4.0.0"
   },
   "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "^2.5.4-dev.3"
+    "@enterthenamehere/esdoc": "^2.5.4-dev.3"
   },
   "keywords": [
     "esdoc",
