--- a/packages/esdoc-lint-plugin/package.json
+++ b/packages/esdoc-lint-plugin/package.json
@@ -17,7 +17,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "^2.5.4-dev.3"
+    "@enterthenamehere/esdoc": "^2.5.4-dev.3"
   },
   "engines": {
     "node": ">=14.21.1"
