--- a/packages/esdoc-react-plugin/package.json
+++ b/packages/esdoc-react-plugin/package.json
@@ -20,7 +20,7 @@
     "cheerio": "1.0.0-rc.10"
   },
   "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "^2.5.4-dev.3",
+    "@enterthenamehere/esdoc": "^2.5.4-dev.3",
     "@enterthenamehere/esdoc-publish-html-plugin": "^2.5.4-dev.3"
   },
   "engines": {
