--- a/packages/esdoc-type-inference-plugin/package.json
+++ b/packages/esdoc-type-inference-plugin/package.json
@@ -20,7 +20,7 @@
     "@enterthenamehere/color-logger": "^2.5.4-dev.5"
   },
   "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "^2.5.4-dev.3"
+    "@enterthenamehere/esdoc": "^2.5.4-dev.3"
   },
   "engines": {
     "node": ">=14.21.1"
