--- a/packages/esdoc-typescript-plugin/package.json
+++ b/packages/esdoc-typescript-plugin/package.json
@@ -20,7 +20,7 @@
     "typescript": "^4.0.5"
   },
   "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "^2.5.4-dev.3"
+    "@enterthenamehere/esdoc": "^2.5.4-dev.3"
   },
   "engines": {
     "node": ">=14.21.1"
