--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -43,10 +43,15 @@
     "transpile": "babel ./src --out-dir ./out --root-mode upward"
   },
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/generator": "^7.12.5",
+    "@babel/parser": "^7.12.5",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/traverse": "^7.12.5",
     "@enterthenamehere/color-logger": "^2.5.4-dev.5",
-    "@enterthenamehere/esdoc-core": "^2.5.4-dev.5",
     "fs-extra": "^9.0.1",
     "minimist": "^1.2.6",
+    "rrdir": "^8.2.2",
     "upath": "^2.0.1"
   },
   "keywords": [
