--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,6 +65,7 @@
         "no-new-func": "error",
         "no-new-wrappers": "error",
         "no-octal-escape": "error",
+        "no-param-reassign": "error",
         "no-promise-executor-return": "error",
         "no-proto": "error",
         "no-prototype-builtins": "error",
