babel: updates node to 14 and comments out commonjs transform

--- a/babel.config.json
+++ b/babel.config.json
@@ -3,7 +3,7 @@
         [
             "@babel/preset-env", {
             "targets": {
-                "node": 10,
+                "node": 14,
                 "esmodules": true
             }}
         ]
@@ -11,7 +11,7 @@
     "ignore": [ "test" ],
     "sourceMaps": "inline",
     "plugins": [
-        "@babel/plugin-transform-modules-commonjs",
+        //"@babel/plugin-transform-modules-commonjs",
         "@babel/plugin-proposal-class-properties"
     ],
     "env": {
