--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/traverse": "^7.12.5",
     "@enterthenamehere/color-logger": "^2.5.4-dev.5",
+    "debug": "^4.3.4",
     "fs-extra": "^9.0.1",
     "minimist": "^1.2.6",
     "rrdir": "^8.2.2",
