--- a/babel.config.json
+++ b/babel.config.json
@@ -11,7 +11,7 @@
     "ignore": [ "test" ],
     "sourceMaps": "inline",
     "plugins": [
-        //"@babel/plugin-transform-modules-commonjs",
+        "@babel/plugin-transform-modules-commonjs",
         "@babel/plugin-proposal-class-properties"
     ],
     "env": {
