--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -38,7 +38,7 @@
     "lint": "eslint ./src",
     "prepare": "npm run build",
     "pretest": "npm run test:clear",
-    "test": "mocha ./test/src",
+    "test": "mocha ./test/src --require ./test/init.js",
     "test:clear": "trash ./test/out",
     "transpile": "babel ./src --out-dir ./out --root-mode upward"
   },
