--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,6 @@
   },
   
   "typescript.tsserver.watchOptions": {
-    "watchFile": "dynamicPriorityPolling"
+    "watchFile": "fixedChunkSizePolling"
   }
 }
