build: adds scripts clear command

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   ],
   "scripts": {
     "build": "lerna run build",
+    "clear": "lerna run clear",
     "precoverage": "trash ./coverage",
     "coverage": "npm run coverage:build && nyc npm run test:execute && npm run build",
     "coverage:build": "lerna run coverage:build",
     "coverage:remove_nyc_output": "trash ./.nyc_output",
     "postcoverage": "npm run coverage:remove_nyc_output",
     "test": "npm run build && npm run test:execute",
+    "test:clear": "lerna run test:clear",
     "test:execute": "lerna run test",
     "test:latest": "lerna run --since main build && lerna run --since main test",
     "lerna:publish_dev": "lerna publish from-package --dist-tag dev"
