--- a/babel.config.json
+++ b/babel.config.json
@@ -8,7 +8,7 @@
             }}
         ]
     ],
-    "ignore": [ "test" ],
+    "ignore": [ "node_modules" ],
     "sourceMaps": "inline",
     "plugins": [
         "@babel/plugin-transform-modules-commonjs",
