--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
         "block-scoped-var": "error",
         "consistent-return": "error",
         "default-case": "error",
+        "default-param-last": "error",
         "eqeqeq": "error",
         "guard-for-in": "error",
         "handle-callback-err": "error",
@@ -65,7 +66,7 @@
         "no-new-func": "error",
         "no-new-wrappers": "error",
         "no-octal-escape": "error",
-        "no-param-reassign": "error",
+        "no-param-reassign": [ "error", { "props": true } ],
         "no-promise-executor-return": "error",
         "no-proto": "error",
         "no-prototype-builtins": "error",
