--- a/.github/workflows/global-install-test.yml
+++ b/.github/workflows/global-install-test.yml
@@ -32,7 +32,11 @@ jobs:
     
     - name: "Installing ESDoc with Standard plugin globally from generated archives..."
       run: |
-        for file in ./*.tgz; do if [[ -f "$file" ]]; then echo "$file"; fi; done
-        
+        for file in ./*.tgz; do if [[ -f "$file" ]]; then echo "Installing $file"; npm install "$file" --ignore-scripts --no-package-lock --no-save fi; done
+      
+    - name: "Debug: list packages in global directory"
+      run: |
+        find "$( npm prefix -g )"/node_modules -max-depth 1 -type d
+    
     - name: "Running tests..."
       run: npm run test
