--- a/.github/workflows/global-install-test.yml
+++ b/.github/workflows/global-install-test.yml
@@ -36,7 +36,7 @@ jobs:
       
     - name: "Debug: list packages in global directory"
       run: |
-        find "$( npm prefix -g )"/node_modules -max-depth 1 -type d
+        find "$( npm prefix -g )"/node_modules -maxdepth 1 -type d
     
     - name: "Running tests..."
       run: npm run test
