--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,4 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "2.5.4-dev.11",
-  "useWorkspaces": true
+  "version": "2.5.4-dev.11"
 }
