--- a/packages/esdoc-flow-type-plugin/package.json
+++ b/packages/esdoc-flow-type-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc-flow-type-plugin",
-  "version": "2.5.4-dev.6",
+  "version": "2.6.0-dev.0",
   "description": "A flow type plugin for ESDoc [PoC]",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/esdoc-flow-type-plugin",
@@ -17,7 +17,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@enterthenamehere/esdoc": "^2.5.4-dev.3"
+    "@enterthenamehere/esdoc": "*"
   },
   "engines": {
     "node": ">=14.21.1"
