build(github): sets env DEBUG to ESDoc:*

--- a/.github/workflows/run-unit-test-for-package-named.yml
+++ b/.github/workflows/run-unit-test-for-package-named.yml
@@ -55,4 +55,6 @@ jobs:
     
     - name: "Running tests for package ${{github.event.inputs.package-name}}..."
       working-directory: ./packages/${{github.event.inputs.package-name}}/
-      run: npm run test
+      run: |
+        DEBUG="ESDoc:*""
+        npm run test
