--- a/.github/workflows/run-unit-test-for-package-named.yml
+++ b/.github/workflows/run-unit-test-for-package-named.yml
@@ -56,5 +56,5 @@ jobs:
     - name: "Running tests for package ${{github.event.inputs.package-name}}..."
       working-directory: ./packages/${{github.event.inputs.package-name}}/
       run: |
-        DEBUG="ESDoc:*""
+        DEBUG="ESDoc:*"
         npm run test
