--- a/.github/workflows/global-install-test-standard.yml
+++ b/.github/workflows/global-install-test-standard.yml
@@ -1,4 +1,4 @@
-name: Global minimal installation test
+name: Global standard installation test
 on:
   # Allows running this workflow manually from the Actions tab
   workflow_dispatch:
