--- a/.github/workflows/local-install-test-standard.yml
+++ b/.github/workflows/local-install-test-standard.yml
@@ -1,4 +1,4 @@
-name: Local minimal installation test
+name: Local standard installation test
 on:
   # Allows running this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,26 +27,26 @@ jobs:
       working-directory: ./test/global-installation/sample-projects/minimal-esdoc-test-fixture
       run: |
         npm list --depth=4
-
-    - name: "[Minimal] Installing ESDoc locally..."
-      working-directory: ./test/global-installation/sample-projects/minimal-esdoc-test-fixture
-      run: |
-        npm install --save-dev @enterthenamehere/esdoc@latest
     
-    - name: "[DEBUG] Local packages in minimal-esdoc-test-fixture:"
-      working-directory: ./test/global-installation/sample-projects/minimal-esdoc-test-fixture
+    - name: "[Standard] Installing ESDoc and standard-plugin locally..."
+      working-directory: ./test/global-installation/sample-projects/standard-esdoc-test-fixture
+      run: |
+        npm install @enterthenamehere/esdoc@latest @enterthenamehere/esdoc-standard-plugin@latest
+    
+    - name: "[DEBUG] Local packages in standard-esdoc-test-fixture:"
+      working-directory: ./test/global-installation/sample-projects/standard-esdoc-test-fixture
       run: |
         npm list --depth=4
-    
-    - name: "[Minimal] Generating documentation..."
-      working-directory: ./test/global-installation/sample-projects/minimal-esdoc-test-fixture
+
+    - name: "[Standard] Generating documentation..."
+      working-directory: ./test/global-installation/sample-projects/standard-esdoc-test-fixture
       run: |
         npm run generate-docs
-    
-    - name: "[Minimal] Executing tests..."
+      
+    - name: "[Standard] Executing tests..."
       working-directory: ./test/global-installation
       run: |
-        npm run test-minimal
+        npm run test-standard
     
     - name: "[DEBUG] Local packages in standard-esdoc-test-fixture:"
       working-directory: ./test/global-installation/sample-projects/standard-esdoc-test-fixture
