--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^1.7.1",
     "fs-extra": "^11.1.1",
+    "git-cliff": "^1.2.0",
     "lerna": "^7.1.3",
     "lerna-update-wizard": "^1.1.2",
     "mocha": "^10.2.0",
